# internal/api/http/v1/dialog.go
@@ -1,0 +1,62 @@
+package v1
+
+import (
+	"github.com/gin-gonic/gin"
+	"net/http"
+	"osoc/internal/api/http/v1/request"
+	"osoc/pkg/log"
+	"osoc/pkg/router/middleware/auth/jwt"
+)
+
+type dialogRoutes struct {
+	logger         log.Logger
+	dialogProvider DialogProvider
+}
+
+func newDialogRoutes(group *gin.RouterGroup, l log.Logger, dp DialogProvider) {
+	d := &dialogRoutes{
+		logger:         l,
+		dialogProvider: dp,
+	}
+
+	group.GET("/dialog/:user_id/list", d.list)
+	group.POST("/dialog/:user_id/send", d.send)
+}
+
+func (d *dialogRoutes) list(c *gin.Context) {
+	var req request.DialogList
+	if err := c.ShouldBindUri(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	userID := c.GetInt(jwt.XUserIDKey)
+	messageList, err := d.dialogProvider.Messages(c.Request.Context(), userID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"data": messageList})
+}
+
+func (d *dialogRoutes) send(c *gin.Context) {
+	var req request.DialogMessage
+	if err := c.ShouldBindUri(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	var dialogMessage request.SendDialogMessage
+	if err := c.ShouldBindUri(&dialogMessage); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	userID := c.GetInt(jwt.XUserIDKey)
+	if err := d.dialogProvider.SaveMessage(c.Request.Context(), userID, req.UserID, dialogMessage.Text); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusCreated, http.StatusText(http.StatusCreated))
+}
